--- a/Storyboard/Registration.storyboard
+++ b/Storyboard/Registration.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pKw-Dw-oxc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pKw-Dw-oxc">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -336,7 +336,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7g-pp-vE5">
-                                <rect key="frame" x="10" y="10" width="44" height="44"/>
+                                <rect key="frame" x="10" y="30" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="FDL-M0-0pT"/>
                                     <constraint firstAttribute="width" constant="44" id="yWM-zz-SfC"/>
@@ -938,6 +938,7 @@
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KR9-C6-8Pv">
                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="26"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                        <color key="tintColor" red="0.90588235289999997" green="0.92156862750000001" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <inset key="titleEdgeInsets" minX="18" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <inset key="imageEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <state key="normal" title="Are you Registered for GST?" image="iconCheckBoxUnselect"/>
@@ -1309,6 +1310,7 @@
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6J-p2-YM4" customClass="RadioButton">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <inset key="titleEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                 <inset key="imageEdgeInsets" minX="-10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                 <state key="normal" title="Collect From Office" image="iconCheckBoxUnselect"/>
@@ -1321,6 +1323,7 @@
                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WgE-qc-O0w" customClass="RadioButton">
                                                                                 <rect key="frame" x="150" y="0.0" width="150" height="50"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                                <color key="tintColor" red="0.90588235289999997" green="0.92156862750000001" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                 <inset key="titleEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                 <inset key="imageEdgeInsets" minX="-10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                                 <state key="normal" title="Transfer to Account" image="iconCheckBoxUnselect"/>
@@ -1945,6 +1948,7 @@
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNz-zl-Ngt">
                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="45"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                        <color key="tintColor" red="0.90588235289999997" green="0.92156862750000001" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <state key="normal" title="Do you hold an SPSL?" image="iconCheckBoxUnselect"/>
@@ -2388,6 +2392,7 @@
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KsT-Y8-W3y">
                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="45"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                         <state key="normal" title="Do you have an Airport Tams Tag?" image="iconCheckBoxUnselect"/>
@@ -2564,6 +2569,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="dFN-sg-Iq5"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -2676,6 +2682,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="L51-E0-1Ag"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -2788,6 +2795,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="8uh-1L-oQP"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -2900,6 +2908,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="Z9I-ID-dh0"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -2946,6 +2955,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="h2Q-DG-sqF"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -2992,6 +3002,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="tCT-U2-Rcb"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -3038,6 +3049,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="19e-AL-1ib"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                             </button>
@@ -3084,6 +3096,7 @@
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" constant="26" id="nkd-50-0Bq"/>
                                                                                 </constraints>
+                                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <state key="normal" image="iconCheckBoxUnselect"/>
                                                                                 <state key="selected" image="iconCheckBoxSelect"/>
                                                                                 <connections>
